# tutor-contrib-azure-blob

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorazure_blob/: plugin.py
tutorazure_blob/patches/: openedx-common-settings  openedx-dockerfile-pre-assets
tutorazure_blob/templates/azure-blob/tasks/azure-blob/: init  init.sh
tutorazure_blob/templates/azure-blob/tasks/lms/: init
