# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-azure-blob"
description = "Store assests on Azure blob"
authors = [
  { name = "Snir Orlanczyk"},
  { email = "sorlanczyk@jacksowndawson.com" },
]
license = { text = "AGPL-3.0-only" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=20.0.0,<21.0.0",
]
optional-dependencies = { dev = ["tutor[dev]>=20.0.0,<21.0.0"] }

# These fields will be set by hatch_build.py
dynamic = ["version"]

[tool.hatch.version]
path = "tutorazure_blob/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/so-jd/tutor-contrib-azure-blob#readme"
Issues = "https://github.com/so-jd/tutor-contrib-azure-blob/issues"
Source = "https://github.com/so-jd/tutor-contrib-azure-blob"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutorazure_blob"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorazure_blob"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
azure-blob = "tutorazure_blob.plugin"
